# dot-api

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  buf.gen.yaml  bun.lockb  docker-compose.yml  drizzle.config.ts  go.work  go.work.sum  package.json  tsconfig.json
.devcontainer/: devcontainer.json
.idx/: dev.nix
auth/: Dockerfile  go.mod  go.sum  grpc.go  main.go  model.go  service.go  store.go  user.db  util.go
bench/auth/: sign-in.lua
common/: env.go  go.mod  go.sum
common/discovery/: error.go
common/utils/: env.go
gateway/: Cargo.toml  Dockerfile  go.mod  main.go
gateway/handler/: auth.go  handler.go
gateway/service/: auth.go  service.go
gateway/src/: main.rs
gateway/src/grpc/: user.rs
gateway/types/: type.go
postman/: Dot Coaching HTTP.postman_collection.json
program/: Dockerfile  go.mod  main.go  model.go
proto/common/: common.proto
proto/exam/: exam.proto  question.proto
proto/program/: program.proto
proto/user/: user.proto
scripts/: .gitignore  converter.py  seeder.py  tidy.sh
src/: errors.ts  index.ts
src/core/: di.ts  errors.ts  response.ts  router.ts
src/db/: index.ts
src/feats/: health.ts
src/helper/: query.ts
src/lib/: db.ts  fb.ts  index.ts  sb.ts
src/middleware/: index.ts
src/router/: auth.ts  club.ts  evaluation.ts  exam.ts  exercise.ts  health.ts  index.ts  media.ts  program.ts  question.ts  tactical.ts  user.ts
src/schemas/: programs.ts  relations.ts  user.ts  users.ts
src/types/: exercise.ts  index.ts  live-tactical.ts  (+2 more)
supabase/: config.toml  drop.ts
tactical/: go.mod
(+142 files in other folders)
